DT-1195 Before merging DT-1192

--- a/localization/en.json
+++ b/localization/en.json
@@ -656,9 +656,12 @@
   "global.firstName": "First Name",
   "global.lastName": "Last Name",
   "global.save": "Save",
+  "global.saveContinue": "Save & Continue",
   "global.saveAs": "Save as",
   "global.saveChanges": "Save Changes",
   "global.edit": "Edit",
+  "global.continueEditing": "Continue Editing",
+  "global.saveNow": "Save Now",
   "global.new": "New",
   "global.editProduct": "Edit Product",
   "global.addProduct": "Add Product",
@@ -1219,7 +1222,9 @@
   "company.regular": "Regular",
   "company.broker": "Broker",
   "confirm.editOrAddNew.header": "Edit or Add New",
+  "confirm.continueEditOrSaveNow.header": "Continue Editing or Save Now",
   "confirm.editOrAddNew.content": "If you like to continue editing this product offer by adding documents, price tiers, or price book rules, click Edit. If you would like to add a new Inventory Item, click New.",
+  "confirm.continueEditOrSaveNow.content": "If you like to continue editing this product offer by adding documents, price tiers, or price book rules, click Continue Editing. If you would like to save, click Save Now.",
   "confirm.deleteNmfcNumber.header": "Delete NMFC Number",
   "confirm.deleteNmfcNumber.content": "Do you really want to delete NMFC Number with code: {code}?",
   "confirm.deleteOfferHeader": "Delete Product Offer",
@@ -3515,6 +3520,7 @@
   "product.packaging.selectFirst": "Please select Packaging Unit",
   "inventory.modal.editListing": "Edit Listing",
   "inventory.modal.addListing": "Add Listing",
+  "inventory.modal.addWanted": "Add Wanted",
   "settings.sendLink.text": "You may email a link to an account controller to add the bank accounts separately",
   "global.emailAddress": "Email Address",
   "settings.accounts.viewInactiveAccounts": "View Inactive Accounts",
