--- a/localization/en.json
+++ b/localization/en.json
@@ -3115,7 +3115,7 @@
   "wantedBoard.fobPrice": "FOB Price",
   "wantedBoard.maxPrice": "Max. Price/Unit",
   "wantedBoard.quantity": "Quantity",
-  "wantedBoard.quantityNeeded": "Qty.Needed",
+  "wantedBoard.quantityNeeded": "Quantity Needed",
   "wantedBoard.shippingLocation" : "Shipping Location",
   "wantedBoard.conforming": "Confirming",
   "wantedBoard.postExpiry": "Post Expiry",
