--- a/localization/en.json
+++ b/localization/en.json
@@ -3584,6 +3584,7 @@
   "myNetworks.detailRow.tradePassConnection": "TradePass Connections",
   "myNetworks.detailRow.marketingData": "Marketing & Social Media",
   "myNetworks.detailRow.verifiedData": "Verified Data",
+  "myNetworks.detailRow.w9download": "W-9 Download",
   "myNetworks.detailRow.insurance_general_liability": "Certificate of Insurance",
   "myNetworks.detailRow.insurance_automobile": "Certificate of Insurance (Automobile)",
   "myNetworks.detailRow.insurance_workers_compensation": "Certificate of Insurance (Workers Compensation)",
