DT-958 attachment w-9 document

--- a/localization/en.json
+++ b/localization/en.json
@@ -1043,6 +1043,7 @@
   "global.addDocument": "Add Document",
   "global.notes": "Notes",
   "global.processed": "Processed",
+  "global.companyW9document": "W-9 Document",
   "global.paymentTerms": "Payment Terms",
   "global.change": "Change",
   "global.packaging": "Packaging",
@@ -1167,6 +1168,7 @@
   "company.logoDescription": "This is how your logo looks on the Web Portal",
   "company.logoHintRow1": "Minimum resolution 100 x 50 px in transparent PNG",
   "company.logoHintRow2": "Use the logo color that matches with dark backgrounds",
+  "company.DocHintRow1": "Maximum file size is 20MB",
   "company.logoButtonDelete": "Delete",
   "company.logoButtonUpload": "Upload",
   "company.logoButtonChange": "Change",
