--- a/localization/en.json
+++ b/localization/en.json
@@ -2811,6 +2811,7 @@
   "order.detail.echoSystemTransaction": "{companyName} Transaction",
   "order.detail.echoSupportPhone": "{companyName} Support Phone",
   "order.detail.clickToEdit": "Click to edit",
+  "order.detail.additionalSupportDescription": "If you require additional support for this order please contact our logistics partner directly at {shippingLogisticsProviderPhone}",
   "order.actionRequired": "Action Required",
   "order.orderInfo": "Order Info",
   "order.oDate": "O Date",
