DT-2354 Operator Order View fixes.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2827,6 +2827,8 @@
   "order.detail.additionalSupportDescription": "If you require additional support for this order please contact our logistics partner directly at {shippingLogisticsProviderPhone}",
   "order.actionRequired": "Action Required",
   "order.orderInfo": "Order Info",
+  "order.customer": "Customer",
+  "order.seller": "Seller",
   "order.oDate": "O Date",
   "order.oConfirmDate": "O Confirmation Date",
   "order.orderAcceptDate": "Order Acceptance Date",
@@ -2846,6 +2848,7 @@
   "order.unitCost": "Unit Cost",
   "order.amount": "Amount",
   "order.transactionFee": "Transaction Fee",
+  "order.shippingCost": "Shipping Cost",
   "order.total": "Total",
   "order.totalPrice": "Total Price",
   "order.cogs": "COGS",
@@ -3121,6 +3124,16 @@
   "order.detail.cancelOrderDescription": "Cancelling an order is irreversible. Please ensure that this decision is final.",
   "order.detail.confirmBack": "Back",
   "order.detail.confirmConfirm": "Confirm",
+  "order.detail.customerName": "Customer Name",
+  "order.detail.customerAddress": "Customer Address",
+  "order.detail.customerEmail": "Customer E-Mail",
+  "order.detail.customerContact": "Customer Contact",
+  "order.detail.customerPhone": "Customer Phone",
+  "order.detail.sellerName": "Seller Name",
+  "order.detail.sellerAddress": "Seller Address",
+  "order.detail.sellerEmail": "Seller E-Mail",
+  "order.detail.sellerContact": "Seller Contact",
+  "order.detail.sellerPhone": "Seller Phone",
   "settings.warehouse.certificates.message.title": "This state/province already has certificate documents uploaded",
   "settings.warehouse.certificates.message.content": "If you want to update the documents, you will replace all existing certificates for warehouses in this state.",
   "settings.warehouse.certificateIcon.header": "Certificate is attached and so will be visible anywhere",
