DT-2365 add release no attribute in orders detail page

--- a/localization/en.json
+++ b/localization/en.json
@@ -2772,6 +2772,7 @@
   "order.return.pickupDate": "Preferred pick-up date:",
   "order.orderId": "Order ID",
   "order.globalStatus": "Status",
+  "order.releaseNo": "Release NO.",
   "order.date": "Order Date",
   "order.vendor": "Vendor",
   "order.productName": "Product Name",
@@ -2848,7 +2849,6 @@
   "order.unitCost": "Unit Cost",
   "order.amount": "Amount",
   "order.transactionFee": "Transaction Fee",
-  "order.shippingCost": "Shipping Cost",
   "order.total": "Total",
   "order.totalPrice": "Total Price",
   "order.cogs": "COGS",
