DT-2354 Operator Order View Update/fixes.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2777,7 +2777,6 @@
   "order.productName": "Product Name",
   "order": "Order",
   "order.shipping": "Shipping",
-  "order.shippingCost": "Shipping Cost",
   "order.deliveryInfo": "Delivery Info",
   "order.tax": "Tax",
   "order.fobPrice": "FOB Price",
@@ -2848,6 +2847,7 @@
   "order.unitCost": "Unit Cost",
   "order.amount": "Amount",
   "order.transactionFee": "Transaction Fee",
+  "order.brokerageFee": "Brokerage Fee",
   "order.shippingCost": "Shipping Cost",
   "order.total": "Total",
   "order.totalPrice": "Total Price",
