DT-2294 Setting validation changes + default input props.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2441,6 +2441,9 @@
   "settings.system.allDisabled": "There is nothing to save as none of the values can be changed.",
   "settings.system.canBeChangedAtTradePass": "This setting can only be set by Company Admin within My TradePass Settings.",
   "settings.system.showReadOnly": "Show read-only settings",
+  "settings.system.enterValue": "Enter value",
+  "settings.system.selectValue": "Select value",
+  "settings.system.addPicture": "Add picture",
   "settings.onlyLastFourNumbers": "Enter only last four digits",
   "settings.user.enabled": "User enabled",
   "settings.systemSettings": "System Settings",
