DT-2365 added releaseNo attribute at admin orders detail page

--- a/localization/en.json
+++ b/localization/en.json
@@ -2772,7 +2772,7 @@
   "order.return.pickupDate": "Preferred pick-up date:",
   "order.orderId": "Order ID",
   "order.globalStatus": "Status",
-  "order.releaseNo": "Release NO.",
+  "order.releaseNo": "Release No.",
   "order.date": "Order Date",
   "order.vendor": "Vendor",
   "order.productName": "Product Name",
