DT-2417 Add Company Generic Product to Request link in Operations / Company Generic Products.

--- a/localization/en.json
+++ b/localization/en.json
@@ -2413,6 +2413,7 @@
   "operations.requestedBy": "Requested by",
   "operations.attachedDocuments": "Attached Documents",
   "operations.shippingRequest": "Shipping Request",
+  "operations.linkCompanyGenericProduct": "Link Company Generic Product",
   "confirm.delete.operations.tag.title": "Delete",
   "confirm.delete.operations.tag.content": "Do you really want to delete tag?",
   "orders.detail": "Detail",
