--- a/localization/en.json
+++ b/localization/en.json
@@ -3471,6 +3471,8 @@
   "velloci.personalInfo.socialSecurityNumber.placeholder": "123456789",
   "velloci.personalInfo.businessOwnershipPercentage": "Business Ownership Percentage",
   "velloci.personalInfo.businessOwnershipPercentage.placeholder": "xx",
+  "velloci.personalInfo.idNumber": "ID Number",
+  "velloci.personalInfo.idNumber.placeholder": "xxxxxxxxx",
   "velloci.termsAndConditions.title": "Please review and accept the following terms and conditions to finish registration",
   "velloci.termsAndConditions.electronicComunications": "I agree that I have read, understood, and consent to:",
   "velloci.termsAndConditions.electronicComunications.link": "Electronic Communications Agreement ",
