split name into first name and last name when creating new company and adding or editing user

--- a/localization/en.json
+++ b/localization/en.json
@@ -1015,6 +1015,7 @@
   "global.published": "Published",
   "global.enterName": "Enter Name",
   "global.enterFirstName": "Enter First Name",
+  "global.enterLastName": "Enter Last Name",
   "global.enterJobTitle": "Enter Job Title",
   "global.enterEmailAddress": "Enter Email Address",
   "global.enterAddressName": "Enter Address Name",
